# enclave

./: .gitignore  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  addressbook.js  egress.js  foundry.toml  net-guard.mjs  package-lock.json  package.json  supervisor.js  tinfoil-config.cpu.yml  tinfoil-config.yml
cache/: test-failures
cli/: README.md  build.mjs  enclave.mjs  install.ps1  install.sh  package.json
contracts/: DEPLOYMENTS.md  EnclaveAddressBook.abi.json  EnclaveAddressBook.sol  EnclaveAppCatalog.abi.json  EnclaveAppCatalog.sol  EnclaveCreditVault.sol  EnclaveDeployments.abi.json  EnclaveDeployments.sol  EnclavePay.abi.json  EnclavePay.sol  EnclaveRegistry.abi.json  EnclaveRegistry.sol  EnclaveReviews.abi.json  EnclaveReviews.sol  EnclaveVolumeAccess.abi.json  EnclaveVolumeAccess.sol  NanAppCatalog.abi.json  NanAppCatalog.sol  NanDeployments.abi.json  NanDeployments.sol  NanPay.sol  NanRegistry.abi.json  NanRegistry.sol  NanVolumeAccess.abi.json  NanVolumeAccess.sol  PaymentRouter.abi.json  PaymentRouter.sol  README.md
docs/: autoscale.md  billing-runbook.md
e2e/: global-setup.mjs  playwright.config.mjs
mps-daemon/: entrypoint.sh
relay/: README.md  api-relay.js  auth.js  billing.js  deploy.sh  dns-relay.js  egress-relay.js  fleet.mjs  mcp.js  net-guard.mjs  package-lock.json  package.json  relay.js  store.js  tcp6-relay.js  udp-relay.js  vaultsvc.js
scripts/: acme-eab-check.mjs  autoscale.mjs  build-contract-artifacts.mjs  build-notices.mjs  build-site.mjs  build-vendor.mjs  catalog-status.mjs  check-wasm-migration.sh  ci-setup.sh  deploy-address-book.mjs  deploy-app-catalog.mjs  deploy-deployments.mjs  deploy-enclave-pay.mjs  deploy-payment-router.mjs  deploy-pin-cleanup.sh  deploy-registry.mjs  deploy-volume-access.mjs  enclave-discover.mjs  enclave-encvol.sh  enclave-vault-client.mjs  enclave-vault.mjs  enclave-volume.sh  ipfs-add-gateway.py  login.mjs  nan-discover.mjs  nan-pin-cleanup.mjs  nan-pin-cleanup.service  nan-pin-cleanup.timer  nan-vault-client.mjs  nan-vault.mjs  nan-volume.sh  release-cli.sh  release.sh  set-prices.mjs  sync-contract-addresses.sh  update-address-book.mjs
site/: 404.html  _redirects  admin.html  apps.html  buy.html  checkout.html  dashboard.html  deploy.html  deploy.sh  develop.html  index.html  openapi.json  privacy.html  robots.txt  terms.html
test/: acme.test.mjs  admin-console.test.mjs  api-relay.test.mjs  autoscale.test.mjs  claim-sweep.test.mjs  cli.test.mjs  config-edit.test.mjs  egress.test.mjs  encvol-e2e.py  image-gateway.test.mjs  ledger-move.test.mjs  (+14 more)
wasm/apps/enc-demo/: Cargo.toml  README.md
wasm/apps/enc-demo/src/: index.html  lib.rs
wasm/apps/enc-demo/wit/: world.wit
wasm/apps/llm-chat/: Cargo.toml  fetch-model.sh
wasm/apps/llm-chat/assets/: app-config.json
wasm/apps/llm-chat/src/: chat.html  config.rs  lib.rs  sampling.rs
wasm/apps/llm-chat/wit/: world.wit
wasm/apps/nn-demo/: Cargo.toml  gen-model.py
wasm/apps/nn-demo/src/: lib.rs  model.onnx
wasm/apps/nn-demo/wit/: world.wit
wasm/apps/vault/: Cargo.toml  README.md
wasm/apps/vault/js/: build.mjs  test-bundle.mjs  vault-app.mjs
wasm/apps/vault/src/: lib.rs  vault.html  vault.js
wasm/apps/vault/wit/: world.wit
(+754 files in other folders)
