[package]
name = "nn-demo"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { version = "0.39.0", features = ["bitflags"] }

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
lto = true

[package.metadata.component]
package = "nan:nn-demo"

[package.metadata.component.target]
path = "wit"
world = "nn-demo"

# WIT deps vendored from wasmtime v45 (see wit/world.wit)
[package.metadata.component.target.dependencies]
"wasi:nn" = { path = "wit/deps/nn" }
"wasi:http" = { path = "wit/deps/http" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:clocks" = { path = "wit/deps/clocks" }
